<resources>
    <string name="app_name">Travel Alarm</string>

    <string name="server_client_id">809332946745-au3mqreqtjuaa2vknvu82v71vpel6q8t.apps.googleusercontent.com</string>
    <string name="title_text">Google Sign-In</string>
    //
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="sign_in">Sign In</string>
    <string name="refresh_token">Get Fresh Token</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>
    <string name="title_activity_maps">Map</string>

    <!-- Button Names on Main -->
    <string name="map_source">From:</string>
    <string name="map_destination">To:</string>
    <string name="map_alarm">Alarm Distance</string>

    <!-- Button Names on Main -->
    <string name="set_marker">Set Marker</string>
    <string name="startBLS">Start</string>
    <string name="stopBLS">Stop</string>
    <!-- Ok and Cancel Button Names -->
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>

    <!-- Distance Values -->
    <string name="select_distance">Distance</string>
    <string name="default_distance">0 km</string>
    <string name="meter500">500 m</string>
    <string name="km1">1 km</string>
    <string name="km2">2 km</string>
    <string name="km5">5 km</string>

    <!-- Search Bar on Map -->
    <string name="map_geo_search_input_hint">Enter Location</string>
    <string name="map_geo_search_clear_input">Clear Input</string>
    <!-- Optional strings -->
    <string name="calculate_distance">Actual Distance</string>
    <string name="default_value">Select Location</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_sound">Allow sound in Silent/Vibrate Mode</string>
    <string name="settings_notification">Show pending-distance notification</string>
    <string name="settings_units"> Km/Miles </string>
    <string name="settings_lock">Lock current route</string>
    <string name="settings_back">Back</string>
    <string name="settings_min_alarm">Minimum Alarm Distance</string>
    <string name="settings_max_alarm">Maximum Alarm Distance</string>
    <string name="kilometer">km</string>
    <string name="miles">miles</string>

    <!-- Favorites -->
    <string name="favorites_title">Favorite Routes</string>
    <string name="favorites_add">Add</string>
    <string name="favorites_delete">Delete</string>
    <string name="favorites_no_list">No Routes to display!</string>

    <!-- Add Route -->
    <string name="add_route_title">Add Route</string>
    <string name="name_route">Name: </string>

    <!-- Feedback -->
    <string name="feedback_title">Feedback</string>
    <string name="feedback_button">Submit Feedback</string>
    <string name="feedback_email_id">maitreya.save@gmail.com</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_fb">Facebook</string>
    <string name="feedback_playstore">Google Playstore</string>
    <string name="feedback_email_image_content_description">Open Email</string>

</resources>
