<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RadioButton
            android:text="@string/meter500"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton500m"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/km1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton1km"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/km2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton2km"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/km5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radioButton5km"
            android:layout_weight="1" />
    </RadioGroup>
</LinearLayout>