<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:title="@string/favorites_delete"
        android:icon="@drawable/ic_action_delete"
        app:showAsAction="ifRoom"
        >
    </item>
    <item
        android:id="@+id/action_cancel_delete"
        android:title="@string/cancel_button"
        android:icon="@drawable/ic_action_close"
        app:showAsAction="ifRoom"
        android:visible="false"
        >
    </item>
    <item
        android:id="@+id/action_ok_delete"
        android:title="@string/ok_button"
        android:icon="@drawable/ic_action_check"
        app:showAsAction="ifRoom"
        android:visible="false"
        >
    </item>
</menu>