<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="in.apps.maitreya.travelalarm.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/settings_linear_layout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:id="@+id/units_tv"
                android:text="@string/settings_units"
                android:layout_height="wrap_content" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/units_switch"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:id="@+id/settings_lock_tv"
                android:text="@string/settings_lock"
                android:layout_height="wrap_content" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/settings_lock_switch"
                android:layout_width="80dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:id="@+id/settings_notification_tv"
                android:text="@string/settings_notification"
                android:layout_height="wrap_content" />
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/settings_notification_switch"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:labelFor="@+id/min_alarm_et"
                android:text="@string/settings_min_alarm"
                />
            <EditText
                android:id="@+id/min_alarm_et"
                android:layout_width="50dp"
                android:inputType="number"
                android:textAlignment="viewEnd"
                android:layout_height="wrap_content"
                />
            <TextView
                android:id="@+id/km_miles_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/kilometer"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/max_alarm_tv"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:labelFor="@+id/max_alarm_et"
                android:text="@string/settings_max_alarm"
                />
            <EditText
                android:layout_width="50dp"
                android:id="@+id/max_alarm_et"
                android:textAlignment="viewEnd"
                android:layout_height="wrap_content"
                android:inputType="number"
                />
            <TextView
                android:id="@+id/km_miles_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/kilometer"/>
        </LinearLayout>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_gravity="center|bottom"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/purple"
        android:onClick="openFeedback"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_button"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:padding="10dp"
            />
    </androidx.cardview.widget.CardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
