<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.apps.maitreya.travelalarm.AddRoute">

    <android.support.v7.widget.CardView
        android:id="@+id/title_route"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/title_route_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_route"
                android:labelFor="@+id/title_route_et"
                android:textSize="25sp"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/title_route_et"
                android:inputType="textAutoComplete"
                />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/map_source_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="mapAddS"
        android:layout_below="@id/title_route"
        android:layout_marginTop="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/source_big_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_source"
                android:textSize="25sp"
                />
            <TextView
                android:text="@string/default_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_grey_500"
                android:id="@+id/source_tv_add"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/map_destination_add"
        android:text="@string/map_destination"
        android:layout_width="match_parent"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:onClick="mapAddD"
        android:layout_height="wrap_content"
        android:layout_below="@+id/map_source_add"
        android:layout_marginTop="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/destination_big_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/map_destination"
                android:textSize="25sp"
                />
            <TextView
                android:text="@string/default_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/destination_tv_add"
                android:textColor="@color/blue_grey_500"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab_ok"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_action_check"
        android:onClick="done"
        app:backgroundTint="@color/purple"
        />
    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab_cancel"
        android:layout_margin="@dimen/fab_margin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        app:srcCompat="@drawable/ic_action_close"
        app:backgroundTint="@color/purple"
        android:onClick="closeView"
        />

</RelativeLayout>
